tests/script_errors/lexer_invalid_float/error.txt
Error: 
    1 | 12.0j5
      |     ^ An unexpected character 'j' was found
